fixed dark mode to be initially loaded

--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,7 @@ h2 {
   padding: 0 20px 20px;
 }
 .card_element a,
+.card_element a i,
 .card_element li,
 .card_element p {
   color: var(--text-primary);
